refactor: remove unused configuration and files; update team page scripts and styles for improved layout and responsiveness

--- a/services.html
+++ b/services.html
@@ -207,7 +207,7 @@
                     Visit Real Estate Portal
                     <i data-lucide="arrow-right"></i>
                 </a>
-                <p class="cta-note">Hosted on realestate.dorstacklimited.com</p>
+                <!-- <p class="cta-note">Hosted on realestate.dorstacklimited.com</p> -->
             </div>
         </div>
     </section>
