--- a/team.html
+++ b/team.html
@@ -634,9 +634,9 @@
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script>
-      lucide.createIcons();
+      if (window.lucide) lucide.createIcons();
     </script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <script src="js/team.js"></script>
 </body>
 </html>
