--- a/portfolio.html
+++ b/portfolio.html
@@ -497,7 +497,7 @@
     <script>
       lucide.createIcons();
     </script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <script src="js/portfolio.js"></script>
 </body>
 </html>
