--- a/blog.html
+++ b/blog.html
@@ -533,7 +533,7 @@
     </footer>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <script src="js/blog.js"></script>
 </body>
 </html>
