--- a/contact.html
+++ b/contact.html
@@ -441,7 +441,7 @@
     </footer>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <script src="js/contact.js"></script>
 </body>
 </html>
