--- a/services.html
+++ b/services.html
@@ -345,6 +345,6 @@
     <script>
       lucide.createIcons();
     </script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
