--- a/testimonials.html
+++ b/testimonials.html
@@ -549,7 +549,7 @@
     <script>
       lucide.createIcons();
     </script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <script src="js/testimonials.js"></script>
 </body>
 </html>
