Refactor code structure and remove redundant functions for improved readability and performance

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="nav-content">
                 <a href="index.html" class="logo">
-                    <div class="logo-icon">D</div>
+                    <img src="img/WhatsApp Image 2025-06-18 at 23.20.39_a355c25b.jpg" alt="Do'r Stack Ltd Logo" class="logo-img" style="height:79px;width:auto;display:block;" />
                     <div class="logo-text">
                         <div class="logo-main">Do'r Stack</div>
                         <div class="logo-sub">LIMITED</div>
@@ -499,5 +499,8 @@
     </script>
     <script type="module" src="js/main.js"></script>
     <script src="js/portfolio.js"></script>
+
+    <div id="cursor-dot"></div>
+    <div id="cursor-outline"></div>
 </body>
 </html>
