--- a/blog-post.html
+++ b/blog-post.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="nav-content">
                 <a href="index.html" class="logo">
-                    <div class="logo-icon">D</div>
+                    <img src="img/WhatsApp Image 2025-06-18 at 23.20.39_a355c25b.jpg" alt="Do'r Stack Ltd Logo" class="logo-img" style="height:79px;width:auto;display:block;" />
                     <div class="logo-text">
                         <div class="logo-main">Do'r Stack</div>
                         <div class="logo-sub">LIMITED</div>
@@ -338,5 +338,8 @@
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script type="module" src="js/main.js"></script>
+
+    <div id="cursor-dot"></div>
+    <div id="cursor-outline"></div>
 </body>
 </html>
